test/lit/vpto/materialize_simt_persistent_fragment_non_resident_access_invalid.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.

// RUN: not ptoas --pto-arch=a5 --pto-backend=vpto --emit-vpto %s -o /dev/null 2>&1 | FileCheck %s

module attributes {pto.target_arch = "a5", pto.kernel_kind = #pto.kernel_kind<vector>} {
  func.func @persistent_fragment_non_resident_access(%dst: !pto.ptr<f32, ub>) attributes {pto.entry} {
    %c2_i32 = arith.constant 2 : i32
    %fragment = llvm.alloca %c2_i32 x f32 {pto.persistent} : (i32) -> !llvm.ptr
    %c1_i64 = arith.constant 1 : i64
    %element1 = llvm.getelementptr %fragment[%c1_i64] : (!llvm.ptr, i64) -> !llvm.ptr, f32
    pto.section.simt<<<32, 1, 1>>> {
      %zero = arith.constant 0.000000e+00 : f32
      llvm.store %zero, %fragment : f32, !llvm.ptr
    }
    pto.section.simt<<<32, 1, 1>>> {
      %value = llvm.load %element1 : !llvm.ptr -> f32
      %c0 = arith.constant 0 : index
      pto.store %value, %dst[%c0] : !pto.ptr<f32, ub>, f32
    }
    return
  }
}

// CHECK: error: 'llvm.load' op persistent SIMT fragment element offset 1 is not initialized by the init section and is not part of residentElements
